# goit-pythonweb-hw-06

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
database/: config.py  connect.py  models.py  my_select.py  seeds.py
migrations/: env.py
migrations/versions/: 19a7deca8cda_add_teachers_subjects_and_grades.py  5f39c4fd7cf3_init.py
